--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ NODE_ENV=development
 
 PORT=4001
 
-db_url = mongodb+srv://parthibanm8612:FpkLhLpcnQV5giaj@cluster2.ekeea.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
+db_url=mongodb+srv://parthibanm8612:FpkLhLpcnQV5giaj@cluster2.ekeea.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster2
