--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development tsx watch --env-file .env.development src/server.ts"
+    "dev": "cross-env NODE_ENV=development tsx watch --env-file .env.development src/server.ts",
+    "prod" : "cross-env NODE_ENV=production tsx watch --env-file .env.production src/server.ts"
   },
   "keywords": [],
   "author": "",
