create : jwt, nodemailer, dayjsservice

--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,6 @@ NODE_ENV=production
 PORT=5002
 
 db_url = mongodb+srv://parthibanm8612:FpkLhLpcnQV5giaj@cluster2.ekeea.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2
+
+EMAIL_ID=parthibanm1268@gmail.com
+EMAIL_PASSWORD=esvctlhjupazbwdh
