--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,6 @@ NODE_ENV=development
 PORT=4001
 
 db_url=mongodb+srv://parthibanm8612:FpkLhLpcnQV5giaj@cluster2.ekeea.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster2
+
+EMAIL_ID=parthibanm1268@gmail.com
+EMAIL_PASSWORD=esvctlhjupazbwdh
