--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=development tsx watch --env-file .env.development src/server.ts",
-    "prod" : "cross-env NODE_ENV=production tsx watch --env-file .env.production src/server.ts"
+    "prod": "cross-env NODE_ENV=production tsx watch --env-file .env.production src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
@@ -25,6 +26,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.4",
     "cross-env": "^10.1.0",
     "tsx": "^4.21.0"
   }
