--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^9.0.2",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
+    "winston": "^3.19.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
