--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
